client/N03_ESP32_LAB/build/log/idf_py_stdout_output_143502
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/greense/projetoGreense/client/N03_ESP32_LAB/build/bootloader/esp-idf/esptool_py && /home/greense/.espressif/python_env/idf5.2_py3.11_env/bin/python /home/greense/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/greense/projetoGreense/client/N03_ESP32_LAB/build/bootloader/bootloader.bin
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/sensores/sensores.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/sensores/sensores.c.obj 
/home/greense/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2.1\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/greense/projetoGreense/client/N03_ESP32_LAB/build/config -I/home/greense/projetoGreense/client/N03_ESP32_LAB/main -I/home/greense/projetoGreense/client/N03_ESP32_LAB/main/conexoes -I/home/greense/projetoGreense/client/N03_ESP32_LAB/main/sensores -I/home/greense/esp/esp-idf/components/newlib/platform_include -I/home/greense/esp/esp-idf/components/freertos/config/include -I/home/greense/esp/esp-idf/components/freertos/config/include/freertos -I/home/greense/esp/esp-idf/components/freertos/config/xtensa/include -I/home/greense/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/greense/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/greense/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/greense/esp/esp-idf/components/freertos/esp_additions/include -I/home/greense/esp/esp-idf/components/esp_hw_support/include -I/home/greense/esp/esp-idf/components/esp_hw_support/include/soc -I/home/greense/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/greense/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/greense/esp/esp-idf/components/heap/include -I/home/greense/esp/esp-idf/components/log/include -I/home/greense/esp/esp-idf/components/soc/include -I/home/greense/esp/esp-idf/components/soc/esp32 -I/home/greense/esp/esp-idf/components/soc/esp32/include -I/home/greense/esp/esp-idf/components/hal/platform_port/include -I/home/greense/esp/esp-idf/components/hal/esp32/include -I/home/greense/esp/esp-idf/components/hal/include -I/home/greense/esp/esp-idf/components/esp_rom/include -I/home/greense/esp/esp-idf/components/esp_rom/include/esp32 -I/home/greense/esp/esp-idf/components/esp_rom/esp32 -I/home/greense/esp/esp-idf/components/esp_common/include -I/home/greense/esp/esp-idf/components/esp_system/include -I/home/greense/esp/esp-idf/components/esp_system/port/soc -I/home/greense/esp/esp-idf/components/esp_system/port/include/private -I/home/greense/esp/esp-idf/components/xtensa/esp32/include -I/home/greense/esp/esp-idf/components/xtensa/include -I/home/greense/esp/esp-idf/components/xtensa/deprecated_include -I/home/greense/esp/esp-idf/components/lwip/include -I/home/greense/esp/esp-idf/components/lwip/include/apps -I/home/greense/esp/esp-idf/components/lwip/include/apps/sntp -I/home/greense/esp/esp-idf/components/lwip/lwip/src/include -I/home/greense/esp/esp-idf/components/lwip/port/include -I/home/greense/esp/esp-idf/components/lwip/port/freertos/include -I/home/greense/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/greense/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/greense/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/greense/esp/esp-idf/components/nvs_flash/include -I/home/greense/esp/esp-idf/components/spi_flash/include -I/home/greense/esp/esp-idf/components/esp_partition/include -I/home/greense/esp/esp-idf/components/esp_wifi/include -I/home/greense/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/greense/esp/esp-idf/components/esp_event/include -I/home/greense/esp/esp-idf/components/esp_phy/include -I/home/greense/esp/esp-idf/components/esp_phy/esp32/include -I/home/greense/esp/esp-idf/components/esp_netif/include -I/home/greense/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/greense/esp/esp-idf/components/tcp_transport/include -I/home/greense/esp/esp-idf/components/esp-tls -I/home/greense/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/greense/esp/esp-idf/components/mbedtls/port/include -I/home/greense/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/greense/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/greense/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/greense/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/greense/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/greense/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/greense/esp/esp-idf/components/esp_timer/include -I/home/greense/esp/esp-idf/components/driver/include -I/home/greense/esp/esp-idf/components/driver/deprecated -I/home/greense/esp/esp-idf/components/driver/analog_comparator/include -I/home/greense/esp/esp-idf/components/driver/dac/include -I/home/greense/esp/esp-idf/components/driver/gpio/include -I/home/greense/esp/esp-idf/components/driver/gptimer/include -I/home/greense/esp/esp-idf/components/driver/i2c/include -I/home/greense/esp/esp-idf/components/driver/i2s/include -I/home/greense/esp/esp-idf/components/driver/ledc/include -I/home/greense/esp/esp-idf/components/driver/mcpwm/include -I/home/greense/esp/esp-idf/components/driver/parlio/include -I/home/greense/esp/esp-idf/components/driver/pcnt/include -I/home/greense/esp/esp-idf/components/driver/rmt/include -I/home/greense/esp/esp-idf/components/driver/sdio_slave/include -I/home/greense/esp/esp-idf/components/driver/sdmmc/include -I/home/greense/esp/esp-idf/components/driver/sigma_delta/include -I/home/greense/esp/esp-idf/components/driver/spi/include -I/home/greense/esp/esp-idf/components/driver/temperature_sensor/include -I/home/greense/esp/esp-idf/components/driver/touch_sensor/include -I/home/greense/esp/esp-idf/components/driver/twai/include -I/home/greense/esp/esp-idf/components/driver/uart/include -I/home/greense/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/greense/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/greense/esp/esp-idf/components/esp_pm/include -I/home/greense/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/greense/projetoGreense/client/N03_ESP32_LAB=. -fmacro-prefix-map=/home/greense/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/sensores/sensores.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/sensores/sensores.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/sensores/sensores.c.obj -c /home/greense/projetoGreense/client/N03_ESP32_LAB/main/sensores/sensores.c
/home/greense/projetoGreense/client/N03_ESP32_LAB/main/sensores/sensores.c: In function 'sensores_ler_dados':
/home/greense/projetoGreense/client/N03_ESP32_LAB/main/sensores/sensores.c:42:9: error: implicit declaration of function 'aht20_read_values'; did you mean 'aht20_read_bytes'? [-Werror=implicit-function-declaration]
   42 |     if (aht20_read_values(&aht20_sensor, &temp_real, &umid_real)) {
      |         ^~~~~~~~~~~~~~~~~
      |         aht20_read_bytes
cc1: some warnings being treated as errors
[3/10] No install step for 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/sensores/aht20.c.obj
ninja: build stopped: subcommand failed.
